--- a/src/scss/pages/about/blogs.scss
+++ b/src/scss/pages/about/blogs.scss
@@ -169,8 +169,8 @@ header {
                 padding: 5px 15px 0 0;
                 color: rgba(0, 0, 0, 0.5);
                 font-size: $font-size-sm;
-                &.scrolled {
-                }
+                // &.scrolled {
+                // }
               }
               .select_box {
                 position: absolute;
