--- a/src/scss/pages/about/blogs.css
+++ b/src/scss/pages/about/blogs.css
@@ -52,7 +52,7 @@ h3 {
 }
 
 body {
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
 }
 
 header {
