--- a/src/scss/pages/blogs/blogs.css
+++ b/src/scss/pages/blogs/blogs.css
@@ -464,11 +464,11 @@ main .blogs .container .block_title {
   margin-bottom: 20px;
   text-align: center;
 }
-main .blogs .container .block_title b {
+main .blogs .container .block_title h2 {
   padding: 7px 0px;
 }
 @media (min-width: 1000px) {
-  main .blogs .container .block_title b {
+  main .blogs .container .block_title h2 {
     font-size: 52px;
   }
 }
