--- a/src/scss/pages/blogs/blogs.scss
+++ b/src/scss/pages/blogs/blogs.scss
@@ -549,7 +549,7 @@ main {
       .block_title {
         margin-bottom: 20px;
         text-align: center;
-        b {
+        h2 {
           padding: 7px 0px;
           @media (min-width:1000px) {
             font-size: 52px;
