--- a/src/scss/pages/home/_main.scss
+++ b/src/scss/pages/home/_main.scss
@@ -356,30 +356,6 @@ body {
                   bottom: 20px;
                   line-height: 15px;
                 }
-                // .range {
-                //   appearance: none;
-                //   -webkit-appearance: none;
-                //   background-color: #ececec;
-                //   width: 100%;
-                //   position: absolute;
-                //   left: 0;
-                //   bottom: 0;
-                //   outline: none;
-                //   &:focus {
-                //     outline: none;
-                //   }
-                //   &::-moz-range-thumb {
-                //     appearance: none;
-                //     cursor: pointer;
-                //     -webkit-appearance: none;
-                //     margin-top: -12px;
-                //     background-color: $additional-white;
-                //     border: 3px solid $primary-color;
-                //     height: 1.2rem;
-                //     width: 1.2rem;
-                //     border-radius: 50%;
-                //   }
-                // }
               }
               .lc_term {
                 width: 100%;
@@ -388,6 +364,7 @@ body {
                   font-size: $font-size-15;
                   line-height: 15px;
                   margin-bottom: 4px;
+                  white-space: nowrap;
                 }
                 .range_result {
                   font-family: "m";
@@ -481,8 +458,7 @@ input[type="range"]::-moz-range-thumb {
   height: 1.2rem;
   width: 1.2rem;
   border-radius: 50%;
-  @media (min-width:1000px) {
-    
+  @media (min-width: 1000px) {
   }
 }
 
@@ -628,7 +604,7 @@ input[type="range"]::-moz-range-thumb {
     }
     .block_content {
       display: block;
-      @media (min-width:1000px) {
+      @media (min-width: 1000px) {
         @include flexible();
       }
       .col {
@@ -680,12 +656,15 @@ input[type="range"]::-moz-range-thumb {
                 box-shadow: 0 2px 14px 0 rgba(0, 0, 0, 0.17);
                 text-align: left;
                 z-index: 9;
-                li{
-                  padding: 0;margin: 0;display: block;
-                  a{
+                li {
+                  padding: 0;
+                  margin: 0;
+                  display: block;
+                  a {
                     padding: 0px 20px;
-                    display: block;white-space: nowrap;
-                    &.active{
+                    display: block;
+                    white-space: nowrap;
+                    &.active {
                       color: $secondary-color;
                     }
                   }
@@ -693,65 +672,62 @@ input[type="range"]::-moz-range-thumb {
               }
             }
           }
-          .calculator{
-            .c_line{
-              @include flexible($jc:space-between,);
+          .calculator {
+            .c_line {
+              @include flexible($jc: space-between);
               border-bottom: 3px solid $primary-color;
               padding-top: 10px;
-              .c_int{
+              .c_int {
                 font-size: calc($font-size-xxlg - 5px);
                 width: 100%;
                 height: 40px;
                 outline: none;
               }
-              .s_curr{
-                
+              .s_curr {
                 background-color: transparent;
                 border: none;
                 font-weight: 600;
               }
             }
-            .c_result{
-              @include flexible($jc:space-between);
+            .c_result {
+              @include flexible($jc: space-between);
               margin-top: 25px;
-              .cr_item{
+              .cr_item {
                 width: 33.3333%;
-                p{
+                p {
                   font-size: $font-size-md;
                   color: rgba(0, 0, 0, 0.5);
                 }
-                b{
+                b {
                   font-size: $font-size-md;
                   font-weight: 500;
                   display: block;
                 }
-
               }
             }
-          
           }
-          .info_p{
+          .info_p {
             padding: 15px 0px 0px;
             color: rgba(0, 0, 0, 0.9);
             font-size: $font-size-sm;
           }
-          .all_exchanges{
+          .all_exchanges {
             background-color: red;
             margin: 25px -20px -20px;
-            border-top: 1px solid #ECECEC;
+            border-top: 1px solid #ececec;
             display: block;
             padding: 17px 30px;
-            transition: all .2s cubic-bezier(.52,.01,.16,1);
-            background: url(../../../../public/images/blueright.svg) no-repeat 91% 21px;
-            @media (min-width:1000px) {
+            transition: all 0.2s cubic-bezier(0.52, 0.01, 0.16, 1);
+            background: url(../../../../public/images/blueright.svg) no-repeat
+              91% 21px;
+            @media (min-width: 1000px) {
               margin: 15px -20px -20px;
-              
             }
-            &:hover{
+            &:hover {
               background-color: $additional-blue;
               color: $additional-white;
 
-            background-image: url(../../../../public/images/whiteright.svg);
+              background-image: url(../../../../public/images/whiteright.svg);
             }
           }
         }
@@ -957,4 +933,14 @@ input[type="range"]::-moz-range-thumb {
       }
     }
   }
+}
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+input[type="number"] {
+  -moz-appearance: textfield;
 }
